# trdcopier

./: .coverage  .emacs.desktop  .gitignore  .gitlab-ci.yml  Makefile  Pipfile  docker-compose.yml  pyproject.toml  setup.cfg
deploy/: Dockerfile
deploy/traefik/: api_gw_volume.traefik.toml  dyn-config.toml
src/: e2e_main.py  main.py  rest_main.py  router_main.py  wsgi.py
src/adapters/: connection_adapter.py
src/domain/: value_objects.py
src/domain/entities/: customer.py  filter.py  message.py  order.py  receiver.py  rule.py  terminal.py
src/infrastructure/adapters/: connection_adapter.py
src/infrastructure/repositories/: customer_repo.py  sql_model.py  terminal_repo.py
src/repositories/: customer_repo.py  rule_repo.py  terminal_repo.py
src/tradecopier.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/tradecopier/application/: __init__.py
src/tradecopier/application/adapters/: connection_adapter.py
src/tradecopier/application/domain/: value_objects.py
src/tradecopier/infrastructure/: __init__.py  register_terminal.py
src/tradecopier/restapi/: deps.py
src/tradecopier/webapp/: __init__.py  app.py  extensions.py  modules.py
src/use_case/: receiving_message.py
tests/: conftest.py  factories.py
tests/domain/entities/: test_customer.py  test_order.py  test_router.py  test_rule.py  test_terminal.py
tests/integration/: conftest.py  test_receive_msg.py  test_repositories.py
tests/restapi/: info.py
tests/use_case/: test_adding_route.py  test_receiving_message.py
tests/user_case/: test_receiving_message.py
(+37 files in other folders)
