[metadata]
name = tradecopier
version = 0.0.1
author = Andrey Kashirin

[options]
include-package-data = True
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.package_data]
tradecopier = py.typed

[tool:pytest]
markers =
	integration: mark a test as an integration test